# hornetRL

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
cooptimize_outputs_final/: morphology_comparison.json
cooptimize_outputs_rigorous/: cooptimize_result.json  cooptimized_morph.json  cooptimized_policy.pkl  morphology_comparison.json
cooptimize_outputs_val/: cooptimize_result.json  cooptimized_morph.json  cooptimized_policy.pkl
hornetRL/: __init__.py  compare_morphologies.py  cooptimize.py  env.py  environment_surrogate.py  evaluate.py  fluid.pkl  fluid_surrogate.py  fly_system.py  inference_hornet.py  neural_cpg.py  neural_idapbc.py  pbt_manager.py  train.py
hornetRL/cooptimize_outputs/: cooptimize_result.json  cooptimized_morph.json  cooptimized_policy.pkl  morphology_comparison.json
hornetRL/eval_outputs/: eval_result.json  eval_result_ablation.json
notebooks/: demo_train.ipynb
