[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hornetRL"
version = "0.1.0"
description = "JAX-based RL framework for robophysical hornets using SHAC and Neural IDA-PBC"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "HaoLi", email = "haoli26@buaa.edu.cn" },
]

dependencies = [
    "jax",
    "dm-haiku",
    "numpy",
    "matplotlib",
    "optax"
]

# 1. TELL SETUPTOOLS WHERE TO FIND THE CODE (Crucial!)
[tool.setuptools.packages.find]
where = ["."]
include = ["hornetRL*"]

# 2. INCLUDE DATA FILES (Like fluid.pkl)
[tool.setuptools.package-data]
hornetRL = ["*.pkl"]