[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hornetRL"
version = "0.2.0"
description = "Differentiable neuromechanical flight optimization for bio-inspired aerial robots."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Hao Li", email = "haoli26@buaa.edu.cn" },
]

dependencies = [
    "jax",
    "dm-haiku",
    "numpy",
    "matplotlib",
    "optax"
]

# 1. TELL SETUPTOOLS WHERE TO FIND THE CODE (Crucial!)
[tool.setuptools.packages.find]
where = ["."]
include = ["hornetRL*"]

# 2. INCLUDE DATA FILES (Like fluid.pkl)
[tool.setuptools.package-data]
hornetRL = ["*.pkl"]